[package]
name = "simple-ebpf"
version = "0.1.0"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.24"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.24.6"
libc = "0.2"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }
